# mailprobe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/mailprobe/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: test_config.py
