[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailprobe"
version = "0.1.0"
description = "IMAP email MCP server with hybrid full-text body search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Frederik Berg" }]
dependencies = [
    "mcp>=1.0.0",
    "imap-tools>=1.0.0",
]

[project.scripts]
mailprobe = "mailprobe:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mailprobe"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "mypy>=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["mailprobe"]
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["imap_tools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
